PyAMF Changelog
===============

This file contains information about the changes between the different
versions of PyAMF.

.. contents::

0.4.1 (unreleased)
------------------
 - object attributes and dict keys are now utf8 encoded bytestrings. Python
   **kwargs doesn't accept unicode key objects. (Ticket:463)

0.4 (2009-01-18)
----------------
 - cpyamf now deals with exceptional floats the same way as pure python -
   especially on windows (Ticket:448)
 - Support for SQLAlchemy 0.5.1 (Ticket:449)
 - amf0.Encoder now has a use_amf3 flag which determines which XML type to
   return to the client (Ticket:435)
 - BufferedByteString.truncate(length) now actually does something useful
   (Ticket:444)
 - setup.py now gets the version number from pyamf/__init__.py source
   (Ticket:429)

0.4rc3 (2008-01-14)
-------------------
 - Support for SQLAlchemy 0.5.0 (Ticket:436)
 - pyamf.util.DataTypeMixIn/cpyamf.util.BufferedByteStream can now
   encode/decode 24bit un/signed integers. (Ticket:422)
 - pyamf.util.StringIOProxy/cpyamf.util.BufferedByteStream both have new
   consume methods that will chop of the tail of the stream (already read
   stream). (Ticket:423)
 - Now checking for all types of supported xml lib types for encoding, but
   will only use the first implementation for decoding (Ticket:426)
 - fpconst dependancy is now only required if the platform requires it
   (Ticket:356)
 - Decoding negative timestamps on certain platforms (namely Windows) are now
   supported (Ticket:390)

0.4rc2 (2009-01-05)
-------------------
 - Support for SQLAlchemy 0.4.0 (Ticket:410)

0.4rc1 (2008-12-31)
-------------------
 - Support for encoding/decoding SQLAlchemy ORM objects with a new adapter.
   Lots of people involved in this one, but special thanks to Dave Thompson
   and Michael Van Tellingen for making this happen. (Ticket:277)
 - All gateways now log exceptions when exceptions are raised during
   en/decoding. (Ticket:394)